templates/ibm-mobilefoundation-dev_template.yaml
---
# Source: ibm-mobilefoundation-dev/templates/service.yaml
###############################################################################
# Licensed Materials - Property of IBM.
# Copyright IBM Corporation 2018. All Rights Reserved.
# U.S. Government Users Restricted Rights - Use, duplication or disclosure
# restricted by GSA ADP Schedule Contract with IBM Corp.
#
# Contributors:
# IBM Corporation - initial API and implementation
###############################################################################
apiVersion: v1
kind: Service
metadata:
  name: release-name-ibm-mobilefoundation-dev
  labels:
    app.kubernetes.io/name: release-name-ibm-mobilefoundation-dev
    helm.sh/chart: ibm-mobilefoundation-dev-1.2.0
    release: "release-name"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/instance: "release-name"
spec:
  type: NodePort
  ports:
  - port: 9080
    targetPort: 9080
    protocol: TCP
    name: http
  - port: 9443
    targetPort: 9443
    protocol: TCP
    name: https
  selector:
    app.kubernetes.io/name: release-name-ibm-mobilefoundation-dev
    release: release-name
---
# Source: ibm-mobilefoundation-dev/templates/deployment.yaml
###############################################################################
# Licensed Materials - Property of IBM.
# Copyright IBM Corporation 2018. All Rights Reserved.
# U.S. Government Users Restricted Rights - Use, duplication or disclosure
# restricted by GSA ADP Schedule Contract with IBM Corp.
#
# Contributors:
# IBM Corporation - initial API and implementation
###############################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-ibm-mobilefoundation-dev
  labels:
    app.kubernetes.io/name: release-name-ibm-mobilefoundation-dev 
    helm.sh/chart: ibm-mobilefoundation-dev-1.2.0
    release: "release-name"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/instance: "release-name"
spec:
  selector:
    matchLabels:
      release: release-name
  replicas: 1
  template:
    metadata:
      annotations:
        productName: IBM MobileFirst Platform Foundation
        productID: IBMMobileFirstPlatformFoundation_8000_perpetual_00000
        productVersion: 8.0.0.0
      labels:
        app.kubernetes.io/name: release-name-ibm-mobilefoundation-dev
        helm.sh/chart: ibm-mobilefoundation-dev-1.2.0
        release: "release-name"
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/instance: "release-name"
    spec:
      affinity:
        nodeAffinity:      
      #https://kubernetes.io/docs/concepts/configuration/assign-pod-node/
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          #If you specify multiple nodeSelectorTerms associated with nodeAffinity types,
          #then the pod can be scheduled onto a node if one of the nodeSelectorTerms is satisfied.
          #
          #If you specify multiple matchExpressions associated with nodeSelectorTerms,
          #then the pod can be scheduled onto a node only if all matchExpressions can be satisfied.
          #
          #valid operators: In, NotIn, Exists, DoesNotExist, Gt, Lt
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
                - ppc64le
                - s390x
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 3
            preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
          - weight: 2
            preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - ppc64le
          - weight: 2
            preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - s390x
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - release-name-ibm-mobilefoundation-dev
                - key: release
                  operator: In
                  values:
                  - "release-name"
              topologyKey: kubernetes.io/hostname
      volumes:
      hostNetwork: false
      hostPID: false
      hostIPC: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
      containers:
      - name: release-name-ibm-mobilefoundation-dev
        readinessProbe:
          httpGet:
            path: /
            port: 9080
          initialDelaySeconds: 30
          periodSeconds: 15
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 10
        livenessProbe:
          tcpSocket:
            port: 9080
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 10
        image: "ibmcom/ibm-mobilefoundation-ce:1.2.0"
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 1000m
            memory: 1024Mi
          limits:
            cpu: 1000m
            memory: 2048Mi
        securityContext:
          privileged: false
          readOnlyRootFilesystem: false
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
          - containerPort: 9080
          - containerPort: 9443
          - containerPort: 9600
        volumeMounts:
        resources:
          limits:
            cpu: 1000m
            memory: 2048Mi
          requests:
            cpu: 1000m
            memory: 1024Mi
---
# Source: ibm-mobilefoundation-dev/templates/ingress.yaml
###############################################################################
# Licensed Materials - Property of IBM.
# Copyright IBM Corporation 2018. All Rights Reserved.
# U.S. Government Users Restricted Rights - Use, duplication or disclosure
# restricted by GSA ADP Schedule Contract with IBM Corp.
#
# Contributors:
# IBM Corporation - initial API and implementation
###############################################################################
apiVersion: networking.k8s.io/v1beta1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: release-name-ibm-mobilefoundation-dev
  labels:
    helm.sh/chart: "ibm-mobilefoundation-dev-1.2.0"
    app.kubernetes.io/name: release-name-ibm-mobilefoundation-dev
    app.kubernetes.io/instance: "release-name"
    release: "release-name"
    app.kubernetes.io/managed-by: "Helm" 
  annotations:
    ingress.kubernetes.io/client-max-body-size: "200m"
    nginx.ingress.kubernetes.io/client-max-body-size: "200m"
    ingress.kubernetes.io/proxy-read-timeout: "300s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300s"
    ingress.kubernetes.io/proxy-connect-timeout: "300s"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300s"
    ingress.bluemix.net/client-max-body-size: "200m"
    ingress.bluemix.net/proxy-read-timeout: "300s"
    ingress.bluemix.net/proxy-connect-timeout: "300s"
    ingress.kubernetes.io/proxy-body-size: "200m"
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
    ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
  - http:
      paths:
      - path: /mfpconsole
        backend:
          serviceName: release-name-ibm-mobilefoundation-dev
          servicePort: 9443
      - path: /mfp
        backend:
          serviceName: release-name-ibm-mobilefoundation-dev
          servicePort: 9443
      - path: /imfpush
        backend:
          serviceName: release-name-ibm-mobilefoundation-dev
          servicePort: 9443
      - path: /mfpadmin
        backend:
          serviceName: release-name-ibm-mobilefoundation-dev
          servicePort: 9443
      - path: /mfpadminconfig
        backend:
          serviceName: release-name-ibm-mobilefoundation-dev
          servicePort: 9443
      - path: /doc
        backend:
          serviceName: release-name-ibm-mobilefoundation-dev
          servicePort: 9443
      - path: /analytics
        backend:
          serviceName: release-name-ibm-mobilefoundation-dev
          servicePort: 9443
      - path: /analytics-service
        backend:
          serviceName: release-name-ibm-mobilefoundation-dev
          servicePort: 9443
      - path: /analytics-receiver
        backend:
          serviceName: release-name-ibm-mobilefoundation-dev
          servicePort: 9443
      - path: /mfpliveupdate
        backend:
          serviceName: release-name-ibm-mobilefoundation-dev
          servicePort: 9443
      - path: /appcenterconsole
        backend:
          serviceName: release-name-ibm-mobilefoundation-dev
          servicePort: 9443
---
# Source: ibm-mobilefoundation-dev/templates/tests/mobilefoundation-wget-test.yaml
###############################################################################
# Licensed Materials - Property of IBM.
# Copyright IBM Corporation 2018. All Rights Reserved.
# U.S. Government Users Restricted Rights - Use, duplication or disclosure
# restricted by GSA ADP Schedule Contract with IBM Corp.
#
# Contributors:
# IBM Corporation - initial API and implementation
###############################################################################
